moving notebooks to local/. Fix server test dataset loading. Fix client loading syftbox dataset

--- a/notebooks/vertical-fl-bank-marketing/local/do_1.ipynb
+++ b/notebooks/vertical-fl-bank-marketing/local/do_1.ipynb
@@ -1,14 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from syft_rds.orchestra import setup_rds_server"
+    "# Data Owner 01"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Setup local syftbox network for local experimentations"
    ]
   },
   {
@@ -17,10 +20,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_EMAIL = \"do_2@gmail.com\"\n",
+    "import os\n",
+    "from pathlib import Path\n",
     "\n",
-    "# remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
-    "do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
+    "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server\n",
+    "\n",
+    "DO_EMAIL = \"do_1@gmail.com\"\n",
+    "\n",
+    "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
+    "do_stack = setup_rds_server(\n",
+    "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
+    ")\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. DO logs into the datasite as admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "do_client = do_stack.init_session(host=DO_EMAIL)"
    ]
   },
@@ -43,22 +69,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "for partition_number in [\"0\", \"1\", \"test\"]:\n",
-    "    DATASET_PATH = Path(f\"./data/marketing/processed/{partition_number}\")\n",
-    "\n",
-    "    dataset = do_client.dataset.create(\n",
-    "        name=f\"marketing-data-{partition_number}\",\n",
-    "        summary=\"Fraud data.\",\n",
-    "        description_path=DATASET_PATH / \"README.md\",\n",
-    "        path=DATASET_PATH,\n",
-    "        mock_path=DATASET_PATH,\n",
-    "    )\n",
-    "    dataset.describe()"
+    "## 2. DO1 prepares and creates a dataset"
    ]
   },
   {
@@ -67,7 +81,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client.datasets"
+    "if not Path(\"../dataset\").exists():\n",
+    "    !uv run ../scripts/prepare_data.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATASET_PATH = Path(\"../dataset/marketing/processed/bank_features\")\n",
+    "\n",
+    "dataset = do_client.dataset.create(\n",
+    "    name=\"bank_features\",\n",
+    "    summary=\"Bank related customer features.\",\n",
+    "    path=DATASET_PATH / \"private\",\n",
+    "    mock_path=DATASET_PATH / \"mock\",\n",
+    "    description_path=DATASET_PATH / \"private\" / \"README.md\",\n",
+    ")\n",
+    "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. DO2 reviews and run jobs"
    ]
   },
   {
@@ -86,15 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
+    "job = jobs[0]\n",
+    "job.show_user_code()"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -102,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client.run_private(jobs[0])"
+    "do_client.run_private(job)"
    ]
   },
   {
