--- a/notebooks/vertical-fl-bank-marketing/local/do_2.ipynb
+++ b/notebooks/vertical-fl-bank-marketing/local/do_2.ipynb
@@ -1,14 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "\n",
-    "from syft_rds.orchestra import remove_rds_stack_dir, setup_rds_server"
+    "# Data Owner 02"
    ]
   },
   {
@@ -17,10 +13,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DO_EMAIL = \"do_1@gmail.com\"\n",
+    "from pathlib import Path\n",
     "\n",
-    "remove_rds_stack_dir(root_dir=Path(\".\"), key=\"flwr\")\n",
-    "do_stack = setup_rds_server(email=DO_EMAIL, root_dir=Path(\".\"), key=\"flwr\")\n",
+    "from syft_rds.orchestra import setup_rds_server"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 0. Setup local syftbox network for local experimentations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "DO_EMAIL = \"do_2@gmail.com\"\n",
+    "do_stack = setup_rds_server(\n",
+    "    email=DO_EMAIL, root_dir=Path(\".\"), key=\"local_syftbox_network\"\n",
+    ")\n",
+    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. DO logs into the datasite as admin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "do_client = do_stack.init_session(host=DO_EMAIL)"
    ]
   },
@@ -43,13 +75,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "if not Path(\"./data\").exists():\n",
-    "    !uv run scripts/prepare_data.py"
+    "## 2. DO2 prepares and creates a dataset"
    ]
   },
   {
@@ -58,17 +87,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for partition_number in [\"0\", \"1\", \"test\"]:\n",
-    "    DATASET_PATH = Path(f\"./data/marketing/processed/{partition_number}\")\n",
+    "DATASET_PATH = Path(\"../dataset/marketing/processed/marketing_features\")\n",
     "\n",
-    "    dataset = do_client.dataset.create(\n",
-    "        name=f\"marketing-data-{partition_number}\",\n",
-    "        summary=\"Fraud data.\",\n",
-    "        description_path=DATASET_PATH / \"README.md\",\n",
-    "        path=DATASET_PATH,\n",
-    "        mock_path=DATASET_PATH,\n",
-    "    )\n",
-    "    dataset.describe()"
+    "dataset = do_client.dataset.create(\n",
+    "    name=\"marketing_features\",\n",
+    "    summary=\"Marketing features.\",\n",
+    "    description_path=DATASET_PATH / \"private\" / \"README.md\",\n",
+    "    path=DATASET_PATH / \"private\",\n",
+    "    mock_path=DATASET_PATH / \"mock\",\n",
+    ")\n",
+    "dataset.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do_client.datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. DO2 reviews and run jobs"
    ]
   },
   {
@@ -87,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "do_client.dataset.get_all()"
+    "job = jobs[0]"
    ]
   },
   {
@@ -96,10 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do_stack.client.config_path)\n",
-    "# os.environ[\"DATA_DIR\"] = str(dataset_path)"
+    "job.show_user_code()"
    ]
   },
   {
