--- a/notebooks/vertical-fl-bank-marketing/local/ds.ipynb
+++ b/notebooks/vertical-fl-bank-marketing/local/ds.ipynb
@@ -1,6 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data Scientist (DS)\n",
+    "\n",
+    "Outline of what the DS will do\n",
+    "\n",
+    "1. DS logs into DO1 and DO2's datasites as guest  \n",
+    "2. DS explores the datasets  \n",
+    "3. DS prepares syft_flwr code  \n",
+    "4. DS bootstraps the syft_flwr project  \n",
+    "5. DS runs flwr and syft_flwr simulations (optional)   \n",
+    "6. DS submits jobs to the DOs' datasites  \n",
+    "7. DS starts the FL server code  \n",
+    "8. DS Observes the Results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. DS logs into DO1 and DO2's datasites as guest\n",
+    "\n",
+    "\n",
+    "DO will also have their own datasite where they can log in as an admin, but it's not needed in this workflow\n",
+    "\n",
+    "<img src=\"../../fl-diabetes-prediction/images/dsLogsInAsGuests.png\" width=\"50%\" alt=\"DS logs into DOs' datasites as guests\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -25,7 +55,7 @@
     "DO1 = \"do_1@gmail.com\"\n",
     "DO2 = \"do_2@gmail.com\"\n",
     "\n",
-    "ds_stack = setup_rds_server(email=DS, key=\"flwr\", root_dir=Path(\".\"))\n",
+    "ds_stack = setup_rds_server(email=DS, key=\"local_syftbox_network\", root_dir=Path(\".\"))\n",
     "do_client_1 = ds_stack.init_session(host=DO1)\n",
     "do_client_2 = ds_stack.init_session(host=DO2)"
    ]
@@ -73,14 +103,20 @@
    "outputs": [],
    "source": [
     "mock_paths = []\n",
-    "for i, client in enumerate([do_client_1, do_client_2]):\n",
-    "    try:\n",
-    "        dataset = client.dataset.get(name=f\"marketing-data-{i}\")\n",
-    "        mock_paths.append(dataset.get_mock_path())\n",
-    "        print(f\"Client {client.host}'s dataset: \\n{dataset}\\n\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error getting dataset for client {client.host}: {e}\")\n",
-    "        mock_paths.append(None)\n",
+    "\n",
+    "try:\n",
+    "    bank_dataset = do_client_1.dataset.get(name=\"bank_features\")\n",
+    "    mock_paths.append(bank_dataset.get_mock_path())\n",
+    "except Exception as e:\n",
+    "    print(f\"Error getting bank dataset for client {do_client_1.host}: {e}\")\n",
+    "    mock_paths.append(None)\n",
+    "\n",
+    "try:\n",
+    "    marketing_dataset = do_client_2.dataset.get(name=\"marketing_features\")\n",
+    "    mock_paths.append(marketing_dataset.get_mock_path())\n",
+    "except Exception as e:\n",
+    "    print(f\"Error getting marketing dataset for client {do_client_1.host}: {e}\")\n",
+    "    mock_paths.append(None)\n",
     "\n",
     "print(mock_paths)"
    ]
@@ -102,16 +138,8 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "PROJECT_PATH = Path(\"./vertical-fl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "PROJECT_PATH"
+    "PROJECT_PATH = Path(\"../vertical-fl\")\n",
+    "assert PROJECT_PATH.exists()"
    ]
   },
   {
