fix bugs, server loads its own labels, improve dataset preparation and exploration

--- a/notebooks/vertical-fl-bank-marketing/local/ds.ipynb
+++ b/notebooks/vertical-fl-bank-marketing/local/ds.ipynb
@@ -118,16 +118,7 @@
     "    print(f\"Error getting marketing dataset for client {do_client_1.host}: {e}\")\n",
     "    mock_paths.append(None)\n",
     "\n",
-    "print(mock_paths)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mock_paths[0]"
+    "mock_paths"
    ]
   },
   {
@@ -162,15 +153,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mock_paths"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
+    "os.environ[\"USE_MOCK_DATA\"] = \"true\"\n",
+    "\n",
     "syft_flwr.run(PROJECT_PATH, mock_paths)"
    ]
   },
@@ -180,27 +166,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i, client in enumerate([do_client_1, do_client_2]):\n",
-    "    print(f\"sending job to {client.host}\")\n",
-    "    job = client.jobs.submit(\n",
-    "        name=\"Syft Flower Experiment\",\n",
-    "        description=\"Syft Flower Federated Learning Experiment\",\n",
-    "        user_code_path=PROJECT_PATH,\n",
-    "        dataset_name=f\"marketing-data-{i}\",\n",
-    "        tags=[\"federated learning\", \"fl\", \"syft_flwr\", \"flwr\"],\n",
-    "        entrypoint=\"main.py\",\n",
-    "    )\n",
-    "    print(job)\n",
-    "\n",
-    "# job = do_client_2.jobs.submit(\n",
-    "#     name=\"Syft Flower Experiment\",\n",
-    "#     description=\"Syft Flower Federated Learning Experiment\",\n",
-    "#     user_code_path=PROJECT_PATH,\n",
-    "#     dataset_name=f\"fraud-data-2\",\n",
-    "#     tags=[\"federated learning\", \"fl\", \"syft_flwr\", \"flwr\"],\n",
-    "#     entrypoint=\"main.py\",\n",
-    "# )\n",
-    "# print(job)"
+    "!rm -rf {PROJECT_PATH / \"**/__pycache__\"}\n",
+    "!rm -rf {PROJECT_PATH / \"simulation_logs\"}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = do_client_1.jobs.submit(\n",
+    "    name=\"Syft Flower Experiment\",\n",
+    "    dataset_name=\"bank_features\",\n",
+    "    user_code_path=PROJECT_PATH,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "job = do_client_2.jobs.submit(\n",
+    "    name=\"Syft Flower Experiment\",\n",
+    "    dataset_name=\"marketing_features\",\n",
+    "    user_code_path=PROJECT_PATH,\n",
+    "    entrypoint=\"main.py\",\n",
+    ")"
    ]
   },
   {
@@ -214,6 +210,7 @@
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
+    "os.environ[\"USE_MOCK_DATA\"] = \"false\"\n",
     "\n",
     "!uv run {str(PROJECT_PATH / \"main.py\")} --active"
    ]
