update fl-diabetes-prediction to use syft_flwr v0.1.7

--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -248,7 +248,7 @@
     "    syft_flwr.bootstrap(SYFT_FLWR_PROJECT_PATH, aggregator=DS, datasites=do_emails)\n",
     "    print(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    logger.error(e)"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
