update federated-analytics-diabetes notebook to use syft-flwr 0.2.0

--- a/notebooks/federated-analytics-diabetes/local/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/do1.ipynb
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do1.job.get_all(status=\"pending_code_review\")\n",
+    "jobs = do1.job.get_all()\n",
     "jobs"
    ]
   },
@@ -197,18 +197,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
-    "\n",
-    "<video width=\"90%\" controls>\n",
-    "  <source src=\"../images/fed-analytics.mp4\" type=\"video/mp4\">\n",
-    "  Your browser does not support the video tag.\n",
-    "</video>"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -223,6 +211,18 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
+    "\n",
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/fed-analytics.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
   }
  ],
  "metadata": {
