--- a/notebooks/federated-analytics-diabetes/local/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/ds.ipynb
@@ -79,6 +79,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import syft_event\n",
+    "\n",
+    "import syft_flwr\n",
+    "\n",
+    "print(syft_event.__version__)\n",
+    "print(syft_flwr.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,7 +269,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = True"
+    "RUN_SIMULATION = False"
    ]
   },
   {
@@ -302,6 +316,7 @@
    "outputs": [],
    "source": [
     "if RUN_SIMULATION:\n",
+    "    os.environ[\"SYFT_FLWR_ENCRYPTION_ENABLED\"] = \"True\"\n",
     "    print(f\"running syft_flwr simulation with mock paths: {mock_paths}\")\n",
     "    syft_flwr.run(SYFT_FLWR_PROJECT_PATH, mock_paths)"
    ]
