--- a/notebooks/federated-analytics-diabetes/local/do2.ipynb
+++ b/notebooks/federated-analytics-diabetes/local/do2.ipynb
@@ -150,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jobs = do2.job.get_all(status=\"pending_code_review\")\n",
+    "jobs = do2.job.get_all()\n",
     "jobs"
    ]
   },
