--- a/notebooks/fl-diabetes-prediction/local/ds.ipynb
+++ b/notebooks/fl-diabetes-prediction/local/ds.ipynb
@@ -264,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = True"
+    "RUN_SIMULATION = False"
    ]
   },
   {
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
