split corpuses into mock / private splits. Rebuild FAISS indices for each split

--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -102,18 +102,9 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "DATASET_DIR = Path(\"../dataset/\").expanduser().absolute()\n",
+    "DATASET_DIR = Path(\"../data/corpus/statpearls\").expanduser().absolute()\n",
     "\n",
-    "if not DATASET_DIR.exists():\n",
-    "    snapshot_download(\n",
-    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
-    "        repo_type=\"dataset\",\n",
-    "        local_dir=DATASET_DIR,\n",
-    "    )\n",
-    "\n",
-    "partition_number = 0\n",
-    "DATASET_PATH = DATASET_DIR / f\"pima-indians-diabetes-database-{partition_number}\"\n",
-    "DATASET_PATH"
+    "assert DATASET_DIR.exists()"
    ]
   },
   {
