fedrag first version works with run_simulation

--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -102,9 +102,17 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "DATASET_DIR = Path(\"../data/corpus/statpearls\").expanduser().absolute()\n",
+    "CORPUS_NAME = \"statpearls\"\n",
+    "DATASET_DIR = (\n",
+    "    Path(f\"../data_processing/processed_data/{CORPUS_NAME}\").expanduser().absolute()\n",
+    ")\n",
+    "PRIVATE_PATH = DATASET_DIR / \"private\"\n",
+    "MOCK_PATH = DATASET_DIR / \"mock\"\n",
+    "README_PATH = DATASET_DIR / \"README.md\"\n",
     "\n",
-    "assert DATASET_DIR.exists()"
+    "assert DATASET_DIR.exists()\n",
+    "assert PRIVATE_PATH.exists()\n",
+    "assert MOCK_PATH.exists()"
    ]
   },
   {
@@ -124,10 +132,10 @@
    "outputs": [],
    "source": [
     "dataset = do1.dataset.create(\n",
-    "    name=\"pima-indians-diabetes-database\",\n",
-    "    path=DATASET_PATH / \"private\",\n",
-    "    mock_path=DATASET_PATH / \"mock\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
+    "    name=CORPUS_NAME,\n",
+    "    path=PRIVATE_PATH,\n",
+    "    mock_path=PRIVATE_PATH,\n",
+    "    description_path=README_PATH,\n",
     ")\n",
     "dataset.describe()"
    ]
