--- a/notebooks/fedrag/local/do2.ipynb
+++ b/notebooks/fedrag/local/do2.ipynb
@@ -44,7 +44,6 @@
     ")\n",
     "do2 = do2_stack.init_session(host=DO_EMAIL)\n",
     "\n",
-    "\n",
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(do2_stack.client.config_path)"
    ]
   },
@@ -81,20 +80,17 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "from huggingface_hub import snapshot_download\n",
+    "CORPUS_NAME = \"textbooks\"\n",
+    "DATASET_DIR = (\n",
+    "    Path(f\"../data_processing/processed_data/{CORPUS_NAME}\").expanduser().absolute()\n",
+    ")\n",
+    "PRIVATE_PATH = DATASET_DIR / \"private\"\n",
+    "MOCK_PATH = DATASET_DIR / \"mock\"\n",
+    "README_PATH = DATASET_DIR / \"README.md\"\n",
     "\n",
-    "DATASET_DIR = Path(\"../dataset/\").expanduser().absolute()\n",
-    "\n",
-    "if not DATASET_DIR.exists():\n",
-    "    snapshot_download(\n",
-    "        repo_id=\"khoaguin/pima-indians-diabetes-database-partitions\",\n",
-    "        repo_type=\"dataset\",\n",
-    "        local_dir=DATASET_DIR,\n",
-    "    )\n",
-    "\n",
-    "partition_number = 1\n",
-    "DATASET_PATH = DATASET_DIR / f\"pima-indians-diabetes-database-{partition_number}\"\n",
-    "DATASET_PATH"
+    "assert DATASET_DIR.exists()\n",
+    "assert PRIVATE_PATH.exists()\n",
+    "assert MOCK_PATH.exists()"
    ]
   },
   {
@@ -113,10 +109,10 @@
    "outputs": [],
    "source": [
     "dataset = do2.dataset.create(\n",
-    "    name=\"pima-indians-diabetes-database\",\n",
-    "    path=DATASET_PATH / \"private\",\n",
-    "    mock_path=DATASET_PATH / \"mock\",\n",
-    "    description_path=DATASET_PATH / \"README.md\",\n",
+    "    name=CORPUS_NAME,\n",
+    "    path=PRIVATE_PATH,\n",
+    "    mock_path=MOCK_PATH,\n",
+    "    description_path=README_PATH,\n",
     ")\n",
     "dataset.describe()"
    ]
