--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -91,8 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SYFTBOX_DATASET_NAME = \"pima-indians-diabetes-database\"\n",
-    "\n",
     "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
@@ -118,16 +116,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SYFTBOX_DATASET_NAME\n",
-    "\n",
     "mock_paths = []\n",
     "for client in do_clients:\n",
-    "    dataset = client.dataset.get(name=SYFTBOX_DATASET_NAME)\n",
-    "    mock_paths.append(dataset.get_mock_path())\n",
-    "    print(\n",
-    "        f\"Client {client.host}'s dataset name: \\n{dataset.name}\\n. Mock path: \\n{dataset.get_mock_path()}\"\n",
-    "    )\n",
-    "    print()"
+    "    dataset = client.dataset.get_all()[0]\n",
+    "    logger.info(f\"Client {client.host}'s dataset name: {dataset.name}\")\n",
+    "    mock_paths.append(dataset.get_mock_path())"
    ]
   },
   {
@@ -157,14 +150,19 @@
     "\n",
     "A `syft_flwr` project requires minimal changes to a Flower project:\n",
     "\n",
-    "1. A `syft_flwr` project has the same structure as an [example federated analytics Flower project](https://flower.ai/blog/2023-01-24-federated-analytics-pandas/):\n",
+    "1. The `syft_flwr` fedrag project has the same structure as an [Flower fedrag project](https://flower.ai/docs/examples/fedrag.html/):\n",
     "```\n",
-    "fed-analytics-diabetes\n",
-    "├── fed-analytics-diabetes\n",
+    "fedrag\n",
+    "├── fedrag/\n",
     "│   ├── __init__.py\n",
-    "│   ├── client_app.py   # Defines your ClientApp\n",
-    "│   ├── server_app.py   # Defines your ServerApp\n",
-    "├── pyproject.toml      # Project metadata like dependencies and configs\n",
+    "│   ├── client_app.py\n",
+    "│   ├── llm_querier.py\n",
+    "│   ├── mirage_qa.py\n",
+    "│   ├── retriever.py\n",
+    "│   ├── retriever.yaml\n",
+    "│   ├── server_app.py\n",
+    "│   └── task.py\n",
+    "├── pyproject.toml\n",
     "└── README.md\n",
     "``` "
    ]
@@ -173,8 +171,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Concretely, for federated diabetes analytics, we have the project code under the path `../fed-analytics-diabetes`\n",
+    "Concretely, the `fedrag` project code is at `../fedrag` \n",
     "\n",
     "<img src=\"../images/dsPreparesSyftFlwrProject.png\" width=\"20%\" alt=\"DS prepares code\">\n"
    ]
@@ -194,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SYFT_FLWR_PROJECT_PATH = Path(\"../fed-analytics-diabetes\")\n",
+    "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
   },
@@ -237,9 +234,9 @@
     "try:\n",
     "    !rm -rf {SYFT_FLWR_PROJECT_PATH / \"main.py\"}\n",
     "    syft_flwr.bootstrap(SYFT_FLWR_PROJECT_PATH, aggregator=DS, datasites=do_emails)\n",
-    "    print(\"Bootstrapped project successfully ✅\")\n",
+    "    logger.info(\"Bootstrapped project successfully ✅\")\n",
     "except Exception as e:\n",
-    "    print(e)"
+    "    logger.error(e)"
    ]
   },
   {
@@ -282,8 +279,7 @@
    "outputs": [],
    "source": [
     "# clean up\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fed_analytics_diabetes\" / \"__pycache__\"}  # clean before submitting\n",
-    "!rm -rf {\"../weights/\"}"
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fedrag\" / \"**/__pycache__\"}  # clean before submitting"
    ]
   },
   {
@@ -302,7 +298,7 @@
    "outputs": [],
    "source": [
     "if RUN_SIMULATION:\n",
-    "    print(f\"running syft_flwr simulation with mock paths: {mock_paths}\")\n",
+    "    logger.info(f\"running syft_flwr simulation with mock paths: {mock_paths}\")\n",
     "    syft_flwr.run(SYFT_FLWR_PROJECT_PATH, mock_paths)"
    ]
   },
@@ -346,9 +342,8 @@
    "outputs": [],
    "source": [
     "# clean up before submitting jobs\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fed_analytics_diabetes\" / \"__pycache__\"}\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}\n",
-    "!rm -rf {\"./figures/\"}"
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fedrag\" / \"__pycache__\"}\n",
+    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"simulation_logs\"}"
    ]
   },
   {
@@ -357,15 +352,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for client in do_clients:\n",
-    "    print(f\"sending job to {client.host}\")\n",
-    "    job = client.job.submit(\n",
-    "        name=\"federated-analytics-diabetes\",\n",
-    "        user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
-    "        dataset_name=SYFTBOX_DATASET_NAME,\n",
-    "        entrypoint=\"main.py\",\n",
-    "    )\n",
-    "    print(job)"
+    "print(f\"sending job to {do1_guest.host}\")\n",
+    "job = do1_guest.job.submit(\n",
+    "    name=\"fedrag\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=\"statpearls\",\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"sending job to {do2_guest.host}\")\n",
+    "job = do2_guest.job.submit(\n",
+    "    name=\"fedrag\",\n",
+    "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
+    "    dataset_name=\"textbooks\",\n",
+    "    entrypoint=\"main.py\",\n",
+    ")\n",
+    "print(job)"
    ]
   },
   {
@@ -374,6 +384,13 @@
    "source": [
     "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"30%\" alt=\"DS waits for jobs to be approved\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
