--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -191,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag\")\n",
+    "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag_v1\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
   },
@@ -352,14 +352,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do1_guest.host}\")\n",
+    "logger.info(f\"sending job to {do1_guest.host}\")\n",
     "job = do1_guest.job.submit(\n",
     "    name=\"fedrag\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=\"statpearls\",\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job)"
+    "logger.success(job)"
    ]
   },
   {
@@ -368,14 +368,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"sending job to {do2_guest.host}\")\n",
+    "logger.info(f\"sending job to {do2_guest.host}\")\n",
     "job = do2_guest.job.submit(\n",
     "    name=\"fedrag\",\n",
     "    user_code_path=SYFT_FLWR_PROJECT_PATH,\n",
     "    dataset_name=\"textbooks\",\n",
     "    entrypoint=\"main.py\",\n",
     ")\n",
-    "print(job)"
+    "logger.success(job)"
    ]
   },
   {
@@ -384,13 +384,6 @@
    "source": [
     "<img src=\"../images/dsWaitsForJobsToBeApproved.png\" width=\"30%\" alt=\"DS waits for jobs to be approved\">"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
