--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -9,9 +9,8 @@
     "Outline of what DO1 will do\n",
     "\n",
     "0. Setup local syftbox network for local experimentations (only needed for the local testing case)\n",
-    "1. DO logs into the datasite as an admin\n",
-    "2. DO creates a Syft dataset \n",
-    "3. DO reviews and run jobs submitted by data scientists on DO's private data"
+    "1. DO logs into the datasite as an admin and creates a Syft dataset \n",
+    "2. DO reviews and run jobs submitted by data scientists on DO's private data"
    ]
   },
   {
@@ -21,7 +20,6 @@
     "## 0. Setup local syftbox network for local experimentations\n",
     "\n",
     "This will set up a local syftbox directory structures to test the whole flow locally under `./local_syftbox_network`, where eventually when all 3 clients have setup their datasites, it will look like below\n",
-    "\n",
     "<img src=\"../images/localSyftBoxNetwork.png\" width=\"20%\" alt=\"local SyftBox network\">"
    ]
   },
@@ -50,48 +48,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. DO logs into the datasite as admin"
+    "## 1. DO logs into the datasite as admin and creates a corpus dataset"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/do1LogsInDatasite.png\" width=\"61%\" alt=\"DO1 logs into local datasite\">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do1 = do_stack.init_session(host=DO_EMAIL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "do1.is_admin"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. DO1 creates a dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, DO1 prepares a diabetes dataset with mock (fake / synthetic) part and real, private part  \n",
+    "First, DO1 prepares a local dataset (`statpearls`) with a mock (fake / synthetic) part and a real, private part  \n",
     "\n",
-    "<img src=\"../images/datasetPartition0.png\" width=\"20%\" alt=\"partitioned dataset 0\">"
+    "<img src=\"../images/do1PreparesDataset.png\" width=\"33%\" alt=\"do1 prepares a Syft dataset\">"
    ]
   },
   {
@@ -119,10 +85,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "DO1 creates a syft dataset, where the mock part is uploaded to the datasite and is public to the SyftBox network, and the private part stays local (never get shared)\n",
+    "DO1 creates a Syft dataset, where the mock part is uploaded to the datasite and is public to the SyftBox network, and the private part stays local (never get shared)\n",
     "\n",
+    "<img src=\"../images/do1UploadsDataset.png\" width=\"45%\" alt=\"do1 creates a Syft dataset\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1 = do_stack.init_session(host=DO_EMAIL)\n",
     "\n",
-    "<img src=\"../images/do1CreatesSyftDataset.png\" width=\"53%\" alt=\"do1 creates a Syft dataset\">"
+    "print(f\"DO1 is an admin to the datasite: {do1.is_admin}\")"
    ]
   },
   {
@@ -144,14 +120,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../images/doWaitsForJobs.png\" width=\"41%\" alt=\"do waiting for jobs\">"
+    "DO1 now waits for jobs from some data scienists\n",
+    "\n",
+    "<img src=\"../images/do1WaitsForJobs.png\" width=\"20%\" alt=\"do waiting for jobs\">"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Review and Run Jobs"
+    "## 2. Review and Run Jobs"
    ]
   },
   {
@@ -160,7 +138,7 @@
    "source": [
     "After the DS submits a job, the DO sees that it has appeared on their datasite, and can review it\n",
     "\n",
-    "<img src=\"../images/do1ReviewsJob.png\" width=\"60%\" alt=\"do1 gets and reviews jobs\">"
+    "<img src=\"../images/do1ReviewsJob.png\" width=\"40%\" alt=\"do1 gets and reviews jobs\">"
    ]
   },
   {
@@ -197,12 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code that trains the model received from the aggregator on their private data and then sends the updated model back to the aggregator. This happens for multiple rounds\n",
-    "\n",
-    "<video width=\"90%\" controls>\n",
-    "  <source src=\"../images/fed-analytics.mp4\" type=\"video/mp4\">\n",
-    "  Your browser does not support the video tag.\n",
-    "</video>"
+    "By running `run_private(job)`, the DO1 runs the `syft_flwr` client code on the private dataset, retrieves the relevant documents and send them to the DS"
    ]
   },
   {
@@ -215,16 +188,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<video width=\"90%\" controls>\n",
+    "  <source src=\"../images/fedrag-rds.mp4\" type=\"video/mp4\">\n",
+    "  Your browser does not support the video tag.\n",
+    "</video>"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "fedrag",
    "language": "python",
    "name": "python3"
   },
