Modified local notebooks to utilize the new dataset downloading method from Hugging Face. Improved clarity in the data scientist's notebook by detailing the preparation of the MirageQA dataset.

--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -66,19 +66,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "from huggingface_hub import snapshot_download\n",
     "\n",
+    "DATASET_DIR = Path(\"../datasets/\").expanduser().absolute()\n",
     "CORPUS_NAME = \"statpearls\"\n",
-    "DATASET_DIR = (\n",
-    "    Path(f\"../data_processing/processed_data/{CORPUS_NAME}\").expanduser().absolute()\n",
-    ")\n",
-    "PRIVATE_PATH = DATASET_DIR / \"private\"\n",
-    "MOCK_PATH = DATASET_DIR / \"mock\"\n",
-    "README_PATH = DATASET_DIR / \"README.md\"\n",
+    "DATASET_PATH = DATASET_DIR / CORPUS_NAME\n",
     "\n",
-    "assert DATASET_DIR.exists()\n",
+    "if not DATASET_PATH.exists():\n",
+    "    snapshot_download(\n",
+    "        repo_id=\"khoaguin/medical-corpus\",\n",
+    "        repo_type=\"dataset\",\n",
+    "        local_dir=DATASET_DIR,\n",
+    "        allow_patterns=f\"{CORPUS_NAME}/*\",\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MOCK_PATH = DATASET_PATH / \"mock\"\n",
+    "PRIVATE_PATH = DATASET_PATH / \"private\"\n",
+    "README_PATH = DATASET_PATH / \"README.md\"\n",
+    "\n",
+    "assert MOCK_PATH.exists()\n",
     "assert PRIVATE_PATH.exists()\n",
-    "assert MOCK_PATH.exists()"
+    "assert README_PATH.exists()"
    ]
   },
   {
