--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -9,7 +9,7 @@
     "Outline of what the DS will do\n",
     "\n",
     "1. DS logs into DO1 and DO2's datasites as guest and explores the mock datasets  \n",
-    "2. DS prepares `syft_flwr` code  \n",
+    "2. DS prepares `syft_flwr` code and the `MirageQA` dataset\n",
     "3. DS runs `flwr` and `syft_flwr` simulations (optional)   \n",
     "4. DS submits jobs to the DOs' datasites  \n",
     "5. DS starts the FL server code  \n",
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. DS prepares `syft_flwr` code\n",
+    "## 2. DS prepares `syft_flwr` code and the `MirageQA` dataset\n",
     "\n",
     "A `syft_flwr` project requires minimal changes to a Flower project:\n",
     "\n",
@@ -203,6 +203,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### DS prepares the MirageQA dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from pathlib import Path\n",
+    "from pprint import pprint\n",
+    "\n",
+    "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag_v1\")\n",
+    "sys.path.append(str(SYFT_FLWR_PROJECT_PATH))\n",
+    "\n",
+    "from fedrag.mirage_qa import MirageQA\n",
+    "\n",
+    "MIRAGE_PATH = Path(\"../datasets/\") / \"mirage.json\"\n",
+    "if not MIRAGE_PATH.exists():\n",
+    "    MirageQA.download(MIRAGE_PATH)\n",
+    "\n",
+    "with open(MIRAGE_PATH, \"r\") as f:\n",
+    "    lines = f.readlines()[:12]\n",
+    "    for line in lines:\n",
+    "        pprint(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. (Optional) DS runs `flwr` and `syft_flwr` simulations"
    ]
   },
@@ -212,7 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = True"
+    "RUN_SIMULATION = False"
    ]
   },
   {
