--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "## 0. Setup local syftbox network for local experimentations\n",
     "\n",
-    "This will set up a local syftbox directory structures to test the whole flow locally under `./local_syftbox_network`, where eventually when all 3 clients have setup their datasites, it will look like below\n",
+    "This will set up a local syftbox directory structures to test the whole flow locally under `./local_syftbox_network`, where eventually when all 3 clients have setup their datasites, it will look like this  \n",
     "<img src=\"../images/localSyftBoxNetwork.png\" width=\"20%\" alt=\"local SyftBox network\">"
    ]
   },
