update fedrag notebooks. download medical corpus subsets from huggingface for faster experimentations

--- a/notebooks/fedrag/local/do2.ipynb
+++ b/notebooks/fedrag/local/do2.ipynb
@@ -58,16 +58,23 @@
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "\n",
-    "DATASET_DIR = Path(\"../datasets/\").expanduser().absolute()\n",
+    "DATASET_DIR = Path.cwd().parent / \"datasets\"\n",
     "CORPUS_NAME = \"textbooks\"\n",
-    "DATASET_PATH = DATASET_DIR / CORPUS_NAME\n",
+    "\n",
+    "use_subset = True  # Set to False to download the full corpus (very slow)\n",
+    "if use_subset:\n",
+    "    DATASET_PATH = DATASET_DIR / \"subsets\" / CORPUS_NAME\n",
+    "    allow_patterns = f\"subsets/{CORPUS_NAME}/*\"\n",
+    "else:\n",
+    "    DATASET_PATH = DATASET_DIR / CORPUS_NAME\n",
+    "    allow_patterns = f\"{CORPUS_NAME}/*\"\n",
     "\n",
     "if not DATASET_PATH.exists():\n",
     "    snapshot_download(\n",
     "        repo_id=\"khoaguin/medical-corpus\",\n",
     "        repo_type=\"dataset\",\n",
     "        local_dir=DATASET_DIR,\n",
-    "        allow_patterns=f\"{CORPUS_NAME}/*\",\n",
+    "        allow_patterns=allow_patterns,\n",
     "    )"
    ]
   },
@@ -79,7 +86,7 @@
    "source": [
     "PRIVATE_PATH = DATASET_PATH / \"private\"\n",
     "MOCK_PATH = DATASET_PATH / \"mock\"\n",
-    "README_PATH = DATASET_PATH / \"README.md\"\n",
+    "README_PATH = MOCK_PATH / \"README.md\"\n",
     "\n",
     "assert PRIVATE_PATH.exists()\n",
     "assert MOCK_PATH.exists()\n",
