--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -68,16 +68,23 @@
    "source": [
     "from huggingface_hub import snapshot_download\n",
     "\n",
-    "DATASET_DIR = Path(\"../datasets/\").expanduser().absolute()\n",
+    "DATASET_DIR = Path.cwd().parent / \"datasets\"\n",
     "CORPUS_NAME = \"statpearls\"\n",
-    "DATASET_PATH = DATASET_DIR / CORPUS_NAME\n",
+    "\n",
+    "use_subset = True  # Set to False to download the full corpus (very slow)\n",
+    "if use_subset:\n",
+    "    DATASET_PATH = DATASET_DIR / \"subsets\" / CORPUS_NAME\n",
+    "    allow_patterns = f\"subsets/{CORPUS_NAME}/*\"\n",
+    "else:\n",
+    "    DATASET_PATH = DATASET_DIR / CORPUS_NAME\n",
+    "    allow_patterns = f\"{CORPUS_NAME}/*\"\n",
     "\n",
     "if not DATASET_PATH.exists():\n",
     "    snapshot_download(\n",
     "        repo_id=\"khoaguin/medical-corpus\",\n",
     "        repo_type=\"dataset\",\n",
     "        local_dir=DATASET_DIR,\n",
-    "        allow_patterns=f\"{CORPUS_NAME}/*\",\n",
+    "        allow_patterns=allow_patterns,\n",
     "    )"
    ]
   },
@@ -89,7 +96,7 @@
    "source": [
     "MOCK_PATH = DATASET_PATH / \"mock\"\n",
     "PRIVATE_PATH = DATASET_PATH / \"private\"\n",
-    "README_PATH = DATASET_PATH / \"README.md\"\n",
+    "README_PATH = MOCK_PATH / \"README.md\"\n",
     "\n",
     "assert MOCK_PATH.exists()\n",
     "assert PRIVATE_PATH.exists()\n",
@@ -211,6 +218,11 @@
     "  Your browser does not support the video tag.\n",
     "</video>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
