--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -164,7 +164,7 @@
     "After the DS has prepared the `syft_flwr` project code, they can run the `syft_flwr.bootstrap` command to modify the project's metadata in `pyproject.toml` that specifies the unique name of the FL run, who are the data owners and who is the aggregator\n",
     "```\n",
     "[tool.syft_flwr]\n",
-    "app_name = \"ds@openmined.org_fed-analytics-diabetes_1753435643\"\n",
+    "app_name = \"ds@openmined.org_fedrag_1757566869\"\n",
     "datasites = [\n",
     "    \"do1@openmined.org\",\n",
     "    \"do2@openmined.org\",\n",
@@ -212,18 +212,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
     "\n",
-    "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag_v1\")\n",
-    "sys.path.append(str(SYFT_FLWR_PROJECT_PATH))\n",
+    "from huggingface_hub import hf_hub_download\n",
     "\n",
-    "from fedrag.mirage_qa import MirageQA\n",
+    "MIRAGE_PATH = Path.cwd().parent / \"datasets\" / \"mirage.json\"\n",
     "\n",
-    "MIRAGE_PATH = Path(\"../datasets/\") / \"mirage.json\"\n",
     "if not MIRAGE_PATH.exists():\n",
-    "    MirageQA.download(MIRAGE_PATH)\n",
+    "    hf_hub_download(\n",
+    "        repo_id=\"khoaguin/medical-corpus\",\n",
+    "        repo_type=\"dataset\",\n",
+    "        filename=\"mirage.json\",\n",
+    "        local_dir=MIRAGE_PATH.parent,\n",
+    "    )\n",
+    "\n",
+    "logger.success(f\"Mirage QA dataset downloaded to: {MIRAGE_PATH}\")\n",
     "\n",
     "with open(MIRAGE_PATH, \"r\") as f:\n",
     "    lines = f.readlines()[:12]\n",
@@ -244,34 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = False"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First we run normal Flower simulation with `flwr run`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if RUN_SIMULATION:\n",
-    "    !flwr run {SYFT_FLWR_PROJECT_PATH}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clean up\n",
-    "!rm -rf {SYFT_FLWR_PROJECT_PATH / \"fedrag\" / \"**/__pycache__\"}  # clean before submitting"
+    "RUN_SIMULATION = True"
    ]
   },
   {
