Distributed notebook for FedRAG

--- a/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/ds.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. DO runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "## 0. DS runs the `syftbox client` in a terminal or the SyftBox UI app \n",
     "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
     "\n",
     "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
