--- a/notebooks/fedrag/distributed/do1.ipynb
+++ b/notebooks/fedrag/distributed/do1.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/do1LogsInSyftBoxDatasite.png\" width=\"70%\" alt=\"DO1 logs into SyftBox datasite\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -51,7 +58,9 @@
     "\n",
     "do1_email = Client.load().email\n",
     "logger.info(f\"DO1 email: {do1_email}\")\n",
-    "do1 = sy.init_session(host=do1_email)"
+    "do1 = sy.init_session(host=do1_email)\n",
+    "\n",
+    "logger.info(f\"{do1.is_admin = }\")"
    ]
   },
   {
