--- a/notebooks/fedrag/distributed/do2.ipynb
+++ b/notebooks/fedrag/distributed/do2.ipynb
@@ -40,6 +40,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/do2LogsInSyftBoxDatasite.png\" width=\"70%\" alt=\"DO1 logs into SyftBox datasite\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -51,7 +58,9 @@
     "\n",
     "do2_email = Client.load().email\n",
     "logger.info(f\"DO2 email: {do2_email}\")\n",
-    "do2 = sy.init_session(host=do2_email)"
+    "do2 = sy.init_session(host=do2_email)\n",
+    "\n",
+    "logger.info(f\"{do2.is_admin = }\")"
    ]
   },
   {
