--- a/notebooks/fedrag/distributed/ds.ipynb
+++ b/notebooks/fedrag/distributed/ds.ipynb
@@ -8,6 +8,7 @@
     "\n",
     "Outline of what the DS will do\n",
     "\n",
+    "0. DS runs the SyftBox client CLI tool or the SyftBox UI app\n",
     "1. DS logs into DO1 and DO2's datasites as guest and explores the mock datasets  \n",
     "2. DS prepares `syft_flwr` code and the `MirageQA` dataset\n",
     "3. DS runs `flwr` and `syft_flwr` simulations (optional)   \n",
@@ -20,7 +21,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 0. DS runs the `syftbox client` in a terminal or the SyftBox UI app \n",
+    "The CLI syftbox client can be installed with a single command: `curl -fsSL https://syftbox.net/install.sh | sh`. The SyftUI app can be installed from `https://www.syftbox.net/`:\n",
+    "\n",
+    "<img src=\"../images/syftboxnet.png\" width=\"40%\" alt=\"syftbox.net\">\n",
+    "\n",
+    "This will set up a SyftBox directory, where by default, it's under the `~/SyftBox` folder \n",
+    "\n",
+    "<img src=\"../images/SyftBoxNetwork.png\" width=\"20%\" alt=\"SyftBox network\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. DS logs into DO1 and DO2's datasites as guest and explores the mock datasets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"../images/dsLogsInAsGuests.png\" width=\"55%\" alt=\"DS logs into DOs' datasites as guests\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import syft_rds as sy\n",
+    "from loguru import logger\n",
+    "from syft_core import Client\n",
+    "\n",
+    "DS = Client.load().email\n",
+    "logger.info(f\"DS's email: {DS}\")\n",
+    "\n",
+    "DO1 = \"<do1_email>\"\n",
+    "DO2 = \"<do2_email>\"\n",
+    "do1_guest = sy.init_session(host=DO1)\n",
+    "do2_guest = sy.init_session(host=DO2)"
    ]
   },
   {
@@ -30,35 +71,13 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "from loguru import logger\n",
-    "from syft_rds.orchestra import setup_rds_server\n",
-    "\n",
-    "DS = \"ds@openmined.org\"\n",
-    "DO1 = \"do1@openmined.org\"\n",
-    "DO2 = \"do2@openmined.org\"\n",
-    "\n",
-    "ds_stack = setup_rds_server(email=DS, root_dir=Path(\".\"), key=\"local_syftbox_network\")\n",
-    "do1_guest = ds_stack.init_session(host=DO1)\n",
-    "do2_guest = ds_stack.init_session(host=DO2)\n",
     "\n",
     "# Set some constants and variables\n",
-    "os.environ[\"SYFTBOX_CLIENT_CONFIG_PATH\"] = str(ds_stack.client.config_path)\n",
     "os.environ[\"LOGURU_LEVEL\"] = \"DEBUG\"\n",
     "os.environ[\"SYFT_FLWR_MSG_TIMEOUT\"] = \"60\"\n",
     "\n",
     "do_clients = [do1_guest, do2_guest]\n",
     "do_emails = [DO1, DO2]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = ds_stack.client"
    ]
   },
   {
@@ -85,7 +104,7 @@
    "source": [
     "DS can access the DOs' mock data, but can't access the private data\n",
     "\n",
-    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"50%\" alt=\"DS explores datasets\">"
+    "<img src=\"../images/dsExploresDOsDatasets.png\" width=\"70%\" alt=\"DS explores datasets\">"
    ]
   },
   {
@@ -151,6 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from pathlib import Path\n",
+    "\n",
     "SYFT_FLWR_PROJECT_PATH = Path(\"../fedrag_v1\")\n",
     "assert SYFT_FLWR_PROJECT_PATH.exists()"
    ]
