add functionality to remove old jobs for DOs

--- a/notebooks/federated-analytics-diabetes/distributed/do1.ipynb
+++ b/notebooks/federated-analytics-diabetes/distributed/do1.ipynb
@@ -144,6 +144,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Clean up old jobs\n",
+    "do1.job.delete_all()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
