--- a/notebooks/fedrag/local/do1.ipynb
+++ b/notebooks/fedrag/local/do1.ipynb
@@ -45,6 +45,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import syft_rds\n",
+    "\n",
+    "syft_rds.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -161,6 +172,15 @@
     "After the DS submits a job, the DO sees that it has appeared on their datasite, and can review it\n",
     "\n",
     "<img src=\"../images/do1ReviewsJob.png\" width=\"40%\" alt=\"do1 gets and reviews jobs\">"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "do1.job.delete_all()"
    ]
   },
   {
