--- a/notebooks/fedrag/local/do2.ipynb
+++ b/notebooks/fedrag/local/do2.ipynb
@@ -148,6 +148,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "do2.job.delete_all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "jobs = do2.job.get_all(status=\"pending_code_review\")\n",
     "jobs"
    ]
