--- a/notebooks/fedrag/local/ds.ipynb
+++ b/notebooks/fedrag/local/ds.ipynb
@@ -248,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "RUN_SIMULATION = True"
+    "RUN_SIMULATION = False"
    ]
   },
   {
