--- a/notebooks/fedrag/distributed/do1.ipynb
+++ b/notebooks/fedrag/distributed/do1.ipynb
@@ -142,6 +142,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Optional: Clean up old jobs\n",
+    "do1.job.delete_all()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
